# MeetPoint

./: README.md  pyproject.toml
meetpoint/: .env  app.py  database.db
meetpoint/core/: parse_input_file.py
meetpoint/core/endpoints/routes/: views.py
meetpoint/core/engine/parsing/: arrival_airport.py  price.py
meetpoint/core/engine/parsing/old/: get_prices.py  parse_aggregator.py
meetpoint/core/engine/session/: generator_session.py  reader_session_data.py
meetpoint/database/: __init__.py  all_airports.py  all_international_airports.py  base.py  create_database.py  fill_tables.py  get_international_airports_rowids.py
meetpoint/models/: input_model.py
meetpoint/static/scripts/: main.js
meetpoint/static/styles/: style.css
meetpoint/templates/: base.html  home.html  main.html  result.html  test.html
meetpoint/utils/: configs.py
