[tool.poetry]
name = "MeetPoint"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.73.0"
uvicorn = "^0.17.5"
SQLAlchemy = "^1.4.31"
databases = {extras = ["postgresql"], version = "^0.5.5"}
aiosqlite = "^0.17.0"
requests = "^2.27.1"
asyncio = "^3.4.3"
aiohttp = "^3.8.1"
pyppeteer = "^1.0.2"
Jinja2 = "^3.0.3"
python-multipart = "^0.0.5"
fake-useragent = "^0.1.11"
xlrd = "^2.0.1"
pydantic = "^1.9.0"
openpyxl = "^3.0.9"
pandas = "^1.4.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
